syntax = "proto3";

package aspb;

import "aspb/anime_season.proto";
import "aspb/title.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message CreateAnimeSeasonTitleRequest {
  int64                   seasonID     = 1;
  AnimeSeasonTitleRequest seasonTitles = 2;
}

message CreateAnimeSeasonTitleResponse {
  AnimeSeasonResponse      animeSeason  = 1;
  AnimeSeasonTitleResponse seasonTitles = 2;
}